--- a/src/Flex4fun.mxml
+++ b/src/Flex4fun.mxml
@@ -1,14 +1,18 @@
 <?xml version="1.0"?>
-<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-               xmlns:components="de.flashforum.ffk11.views.components.*">
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
 
-    <fx:Script>
+    <fx:Style>
         <![CDATA[
+        @namespace s "library://ns.adobe.com/flex/spark";
+
+        s|Button
+        {
+            color: #FF0000;
+            skinClass:ClassReference("de.flashforum.ffk11.views.components.skins.ButtonSkin");
+        }
         ]]>
-    </fx:Script>
+    </fx:Style>
 
-    <fx:Declarations/>
-
-    <components:MyUIComponent myName="Florian" />
+    <s:Button id="fred" label="Fred" />
 
 </s:Application>
