--- a/src/de/flashforum/ffk11/views/components/skins/ButtonSkin.mxml
+++ b/src/de/flashforum/ffk11/views/components/skins/ButtonSkin.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-             minHeight="21" minWidth="21">
+             xmlns:mx="library://ns.adobe.com/flex/mx" minHeight="21" minWidth="21">
 
     <fx:Metadata>
         <![CDATA[
@@ -8,12 +8,18 @@
         ]]>
     </fx:Metadata>
 
+    <fx:Declarations>
+        <mx:SolidColor id="fill" color="#0000FF" color.over="#00FFFF" color.down="#FF00FF" />
+    </fx:Declarations>
+
     <s:states>
         <s:State name="up" />
         <s:State name="over" />
         <s:State name="down" />
         <s:State name="disabled" />
     </s:states>
+
+    <s:Rect bottom="0" fill="{fill}" left="0" right="0" top="0" />
 
     <s:Label id="labelDisplay" />
 
