--- a/src/Flex4fun.mxml
+++ b/src/Flex4fun.mxml
@@ -1,11 +1,13 @@
 <?xml version="1.0"?>
-<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
+               xmlns:components="de.flashforum.ffk11.views.components.*">
 
     <fx:Style>
         <![CDATA[
         @namespace s "library://ns.adobe.com/flex/spark";
+        @namespace components "de.flashforum.ffk11.views.components.*";
 
-        s|Button
+        components|Panel #closeButton
         {
             color: #FF0000;
             skinClass:ClassReference("de.flashforum.ffk11.views.components.skins.ButtonSkin");
@@ -13,6 +15,8 @@
         ]]>
     </fx:Style>
 
-    <s:Button id="fred" label="Fred" />
+    <components:Panel>
+        <s:Button id="fred" label="Fred" />
+    </components:Panel>
 
 </s:Application>
