--- a/src/Flex4fun.mxml
+++ b/src/Flex4fun.mxml
@@ -1,14 +1,18 @@
 <?xml version="1.0"?>
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-               xmlns:components="de.flashforum.ffk11.views.components.*">
+               preinitialize="preinitializeHandler(event)">
 
-    <components:Panel>
-        <s:Button id="fred" label="Fred" />
+    <fx:Script><![CDATA[
+        import mx.events.FlexEvent;
+        import mx.logging.ILoggingTarget;
+        import mx.logging.Log;
+        import mx.logging.targets.TraceTarget;
 
-        <components:controlBarContent>
-            <s:Button label="Barney" />
-        </components:controlBarContent>
+        private function preinitializeHandler(event:FlexEvent):void
+        {
+            const target:ILoggingTarget = new TraceTarget();
 
-    </components:Panel>
-
+            Log.addTarget(target);
+        }
+        ]]></fx:Script>
 </s:Application>
