--- a/src/Flex4fun.mxml
+++ b/src/Flex4fun.mxml
@@ -1,18 +1,33 @@
 <?xml version="1.0"?>
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
+               xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:components="de.flashforum.ffk11.views.components.*"
                preinitialize="preinitializeHandler(event)">
 
-    <fx:Script><![CDATA[
+    <fx:Script>
+        <![CDATA[
+        import de.flashforum.ffk11.model.ExampleDTO;
+        import de.flashforum.ffk11.model.IExample;
+
         import mx.events.FlexEvent;
-        import mx.logging.ILoggingTarget;
-        import mx.logging.Log;
-        import mx.logging.targets.TraceTarget;
 
         private function preinitializeHandler(event:FlexEvent):void
         {
-            const target:ILoggingTarget = new TraceTarget();
-
-            Log.addTarget(target);
+            var ex:IExample;
+            for (var i:uint; i < 100; i++)
+            {
+                ex = new ExampleDTO();
+                ex.label = "Example " + i;
+                dataProvider.addItem(ex);
+            }
         }
-        ]]></fx:Script>
+
+        ]]>
+    </fx:Script>
+
+    <fx:Declarations>
+        <mx:ArrayList id="dataProvider"/>
+    </fx:Declarations>
+
+    <components:ListChain id="chain" dataProvider="{dataProvider}" height="200" />
+
 </s:Application>
